--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -10,10 +10,10 @@
         <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('about') }}">Register Client </a>
+        <a class="nav-link" href="{{ url_for('registration') }}">Register Client </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('about') }}"> Customer Search </a>
+        <a class="nav-link" href=""> Customer Search </a>
       </li>
     </ul>
     <ul class="navbar-nav">
@@ -23,5 +23,3 @@
     </ul>
   </div>
 </nav>
-
-© 2019 GitHub, Inc.
