--- a/app/templates/addemployee.html
+++ b/app/templates/addemployee.html
@@ -1,13 +1,13 @@
-{% extends base.html %}
+{% extends "base.html" %}
 
 
-{% main block %}
+{% block main %}
 
 <h2> 
     Add Employee
 </h2>
 
-<form method="POST">
+<form method="POST" action="{{ url_for('add_employee') }}">
     <div>
         {{form.firstname.label}}
         <br>
@@ -18,6 +18,11 @@
         <br>
         {{form.lastname}}
     </div>
+    <div class = "registeration">
+            {{ form.gender.label }}
+            <br>
+            {{ form.gender (class='form-control)}}
+     </div>
     <div>
         {{form.address.label}}
         <br>
@@ -38,6 +43,12 @@
         <br>
         {{form.password}}
     </div>
+    <div>
+        {{form.User_type.label}}
+        <br>
+        {{form.User_type}}
+    </div>
+    <br>
     <input type="submit"  class="btn btn-primary"/>
 </form>
 
