--- a/app/templates/Manager.html
+++ b/app/templates/Manager.html
@@ -4,7 +4,7 @@
 {% block main %}
 
 <div class="CenterBox">
- <a href="{{ url_for('add_employee') }}">
+ <a href="{{ url_for('addemployee') }}">
      <button id="employee" type="submit">
          Add Employee
     </button>
@@ -29,6 +29,15 @@
  </a>
  <br>
  <br>
+ 
+ <a href = "{{ url_for('customerprofiles') }}"> 
+     <button id="customer" type="submit"> 
+         Customer Search 
+     </button>
+ </a>
+ <br>
+ <br>
+ 
  <a href="">
      <button id="delete" type="submit"> 
          Delete Client 
