--- a/app/templates/logout.html
+++ b/app/templates/logout.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
 
+ 
+ 
 {% block main %}
-   <title>Logout</title>
+
+{% include 'flash_messages.html' %}
    <img src=""></img>
+   <hr>
+  
 <h5>
     Your logged out, have a great day at work today.
 </h5>
