--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,24 @@
 body {
     padding-top: 5rem;
+    font-family: "Oxygen","Droid Sans", "Helvetica Neue", "Helvetica", "Arial";
+}    
+
+
+.border-style, .CenterBox{
+    margin: 0 auto;
+    padding: 5px;
+    width: 45%;
+    background-color: white;
+    border-radius: 3px;
+    border-top: 3px #007bff solid;
+    box-shadow:    3px 3px 5px 6px gray;
+}
+
+button{
+    border-radius: 50px;
+    display: block;
+}
+
+#customer{
+    margin: 0 auto;
 }
