--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,19 +7,18 @@
 
    <form method="post" action="{{ url_for('login') }}">
         {{ form.csrf_token }}
-      <div class="form-group">
-        {{ form.username.label }}
+      <div class="border-style">
+     
+        {{ form.username.label}}
         <br>
         {{ form.username(class='form-control', placeholder="Enter your username") }}
-      </div>
-      <div class="form-group">
+        <br>
         {{ form.password.label }}
         <br>
         {{ form.password(class='form-control', placeholder="Enter your password") }}
-      </div>
-      
+        <br>
       <input type="submit" class="btn btn-primary"/>
-       
+      </div>
    </form>
    
    
