--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block main %}
- <img src= "static/img/welcome.jpg"/> <br /><br />
+ <img src= "static/img/Home.png"/> <br /><br />
  <hr>
 
 <h1>Welcome to</h1>
