--- a/app/templates/mission_statement.html
+++ b/app/templates/mission_statement.html
@@ -2,10 +2,12 @@
 
 
 {% block main %}
- <h1> Mission Statment </h1>
+ <img src= "static/img/Home.png"/> <br /><br />
 <hr>
 
 <div>
+     <h1> Mission Statment </h1>
+     <br>
     <p>
         <h3>
         Bringing cool, clean air to Jamaicans, Islandwide.
