--- a/app/templates/vission_statement.html
+++ b/app/templates/vission_statement.html
@@ -3,11 +3,12 @@
 
 {% block main %}
 
+<img src= "static/img/Home.png"/> <br /><br />
+<hr>
 <h1>
     Vission Statment
 </h1>
-<hr>
-
+<br>
 <div>
     <p>
         
