--- a/app/templates/list-of-customer.html
+++ b/app/templates/list-of-customer.html
@@ -2,9 +2,9 @@
 {% extends "base.html" %}
 
 {% block main%}
-{% include "flash_message.html"%}
 
  <h1 class="title">Profiles</h1>
+ {% include 'flash_messages.html' %}
  <hr id="title_sep">
 
 <div class="profiles-container">
@@ -16,7 +16,7 @@
             <br>
             <img class="person" src="{{ url_for('static', filename='icons/person.png')}}"/> <span class="blk">{{ profile['gender'] }}</span>
             <br>
-            <img class="person" src="{{ url_for('static', filename='icons/locate.png')}}"/> <span class="blk">{{ profile['location'] }}</span>
+            <img class="person" src="{{ url_for('static', filename='icons/locate.png')}}"/> <span class="blk">{{ profile['email'] }}</span>
         </div>
         <div class="view-profile center col">
             <a class="view-btn btn-success" href="{{ url_for('inidi_profile', userid=profile['id']) }}">View profile</a>
