--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -21,6 +21,10 @@
             <br>
             {{ form.gender (class='form-control')}}
             <br>
+            {{form.phoneNum.label}}
+            <br>
+            {{ form.phoneNum (class='form-control', placeholder ="876-294-876")}}
+            <br>
             {{ form.address.label }}
             <br>
             {{ form.address (class='form-control')}}
