--- a/app/templates/vission_statement.html
+++ b/app/templates/vission_statement.html
@@ -4,11 +4,10 @@
 {% block main %}
 
 <img src= "static/img/Home.png"/> <br /><br />
-<hr>
-<h1>
-    Vission Statment
-</h1>
-<br>
+<h2>
+    Vision Statment
+</h2>
+
 <div>
     <p>
         
