--- a/app/templates/Employee.html
+++ b/app/templates/Employee.html
@@ -2,6 +2,9 @@
 
 
 {% block main %}
+<img src= "/static/img/Home.png"/> <br /><br />
+ {% include 'flash_messages.html' %}
+ <hr>
 
 <div class="CenterBox">
  <a href="{{ url_for('registration') }}">
