--- a/app/templates/list-of-customer.html
+++ b/app/templates/list-of-customer.html
@@ -2,9 +2,9 @@
 {% extends "base.html" %}
 
 {% block main%}
-<img src= "static/img/Home.png"/> <br /><br />
+<img src= "/static/img/Home.png"/> <br /><br />
  <h1 class="title">Customers</h1>
- {% include 'flash_messages.html' %}
+ 
  <hr id="title_sep">
 
 <div class="profiles-container">
