--- a/app/templates/inidi_customer_profile.html
+++ b/app/templates/inidi_customer_profile.html
@@ -2,13 +2,13 @@
 
 {% block main %}
 
-<img src= "static/img/Home.png"/> <br /><br />
+<img src= "/static/img/Home.png"/> <br /><br />
 <hr>
 {% include 'flash_messages.html' %}
 <div class="card">
     <div class="row top-info">
         <div class="col">
-          <span class="name">{{user.first_name+" "+user.last_name}}</span>
+          <span class="name">{{user.title+" "+user.first_name+" "+user.last_name}}</span>
            <br>
               <span class="blk">{{user.email}}</span>
            <br>
@@ -19,7 +19,8 @@
     </div>
 <div class="card-body">
         <div class="btn-container">
-            <a href="#" class="center col-md-6 btn btn-success">Appointment</a>
+            <a href="{{ url_for('Create_appointment') }}" class="center col-md-6 btn btn-success"> Appointment</a>
+            <a href="{{ url_for('Ac') }}" class="center col-md-6 btn btn-success"> Ac Issue </a>
         </div>
     </div>
 </div>
